new: added TrayIcon Notifications